--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,10 @@
-RewriteRule index.(html|php)$ view/index/index.php
-RewriteRule ^admin$ view/admin/login.php
-RewriteRule ^admin/r/(\w+)$ view/admin/login.php?art_id=$1&r=$2
-RewriteRule ^styles/(\w+)\.css$ view/styles/$1.css
-RewriteRule ^images/((\w+)\.(png|jpg))$ view/images/$1
-RewriteRule ^scripts/(\w+)\.js$ view/scripts/$1.js
-RewriteRule ^articles/([0-9]+)$ view/index/bbs.php?art_id=$1
-RewriteRule ^articles/([0-9]+)/r/(\w+)$ view/index/bbs.php?art_id=$1&r=$2
-RewriteRule ^articles/([0-9]+)/page/(\w+)$ view/index/bbs.php?art_id=$1&page_index=$2
+RewriteRule ^(/)?$ view/index/index.php
+RewriteRule ^admin/$ controller/admin/admin.php
+RewriteRule ^login/$ view/admin/login.php
+RewriteRule ^articles/([0-9]*)/$ view/index/bbs.php?art_id=$1
+RewriteRule ^articles/([0-9]*)/submit$ view/index/bbs.php
+RewriteRule ^articles/([0-9]*)/page/(\w+)/$ view/index/bbs.php?art_id=$1&page_index=$2
+RewriteRule ^(.*)/r/(.*)$ view/index/bbs.php?r=$2 [L]
+RewriteRule ^(.*)/scripts/(.*)\.js$ view/scripts/$2.js [L]
+RewriteRule ^(.*)/styles/(.*)\.css$ view/styles/$2.css [L]
+RewriteRule ^(.*)/images/(.*)\.(png|jpg)$ view/images/$2.$3 [L]
