--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,14 @@
-RewriteRule ^(/)?$ view/index/index.php
-RewriteRule ^admin/$ controller/admin/admin.php
-RewriteRule ^login/$ view/admin/login.php
-RewriteRule ^error/(.*)\.html$ view/error/$1.html
-RewriteRule ^articles/([0-9]*)/$ view/index/bbs.php?art_id=$1
-RewriteRule ^articles/([0-9]*)/submit$ view/index/bbs.php
-RewriteRule ^articles/([0-9]*)/page/(\w+)/$ view/index/bbs.php?art_id=$1&page_index=$2
-RewriteRule ^(.*)/r/(.*)$ view/index/bbs.php?r=$2 [L]
-RewriteRule ^(.*)scripts/(.*)\.js$ view/scripts/$2.js [L]
-RewriteRule ^(.*)styles/(.*)\.css$ view/styles/$2.css [L]
-RewriteRule ^(.*)images/(.*)\.(png|jpg)$ view/images/$2.$3 [L]
+RewriteRule ^(/)?$ view/index/index.php?view=all
+
+RewriteRule ^scripts/(.*)\.js$ view/scripts/$1.js [L]
+RewriteRule ^styles/(.*)\.css$ view/styles/$1.css [L]
+RewriteRule ^images/(.*)\.(png|jpg)$ view/images/$1.$2 [L]
+
+RewriteRule ^login/$ view/admin/login.php?view=login [L]
+RewriteRule ^login/r/([0-9]*)$ view/admin/login.php?view=login&r=$1 [L]
+RewriteRule ^login/(.*)$ view/admin/$1.php [L]
+
+RewriteRule ^articles/([0-9]*)/$ view/index/bbs.php?view=single&id=$1 [L]
+RewriteRule ^articles/([0-9]*)/login$ view/index/bbs.php [L]
+RewriteRule ^articles/([0-9]*)/r/([0-9]*)$ view/index/bbs.php?view=single&id=$1&r=$2 [L]
+RewriteRule ^articles/([0-9]*)/page/(.*)/$ view/index/bbs.php?view=single&id=$1&page=$2 [L]
