--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
-    "require-dev": {
-        "friendsoftphp/php-cs-fixer": "2.8.2",
-        "phpunit/phpunit": "6.2.2"
+    "require": {
+        "php": ">=7.1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "app\\": "app"
+        },
+        "psr-0": {
+            "": "extend/"
+        }
     }
 }
